hphp/hack/test/typecheck/is_expression/softtype.php
<?hh // partial

function g(int $x) {}

function f(mixed $x, bool $b) {
  if ($x is @int) {
    g($x);
  }
}
